; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8192U_core.c_rtl8192_refresh_supportrate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8192U_core.c_rtl8192_refresh_supportrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r8192_priv = type { %struct.ieee80211_device* }
%struct.ieee80211_device = type { i64, i32, i32 }

@WIRELESS_MODE_N_24G = common dso_local global i64 0, align 8
@WIRELESS_MODE_N_5G = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtl8192_refresh_supportrate(%struct.r8192_priv* %0) #0 {
  %2 = alloca %struct.r8192_priv*, align 8
  %3 = alloca %struct.ieee80211_device*, align 8
  store %struct.r8192_priv* %0, %struct.r8192_priv** %2, align 8
  %4 = load %struct.r8192_priv*, %struct.r8192_priv** %2, align 8
  %5 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %4, i32 0, i32 0
  %6 = load %struct.ieee80211_device*, %struct.ieee80211_device** %5, align 8
  store %struct.ieee80211_device* %6, %struct.ieee80211_device** %3, align 8
  %7 = load %struct.ieee80211_device*, %struct.ieee80211_device** %3, align 8
  %8 = getelementptr inbounds %struct.ieee80211_device, %struct.ieee80211_device* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @WIRELESS_MODE_N_24G, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %18, label %12

12:                                               ; preds = %1
  %13 = load %struct.ieee80211_device*, %struct.ieee80211_device** %3, align 8
  %14 = getelementptr inbounds %struct.ieee80211_device, %struct.ieee80211_device* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @WIRELESS_MODE_N_5G, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %26

18:                                               ; preds = %12, %1
  %19 = load %struct.ieee80211_device*, %struct.ieee80211_device** %3, align 8
  %20 = getelementptr inbounds %struct.ieee80211_device, %struct.ieee80211_device* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.ieee80211_device*, %struct.ieee80211_device** %3, align 8
  %23 = getelementptr inbounds %struct.ieee80211_device, %struct.ieee80211_device* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @memcpy(i32 %21, i32 %24, i32 16)
  br label %31

26:                                               ; preds = %12
  %27 = load %struct.ieee80211_device*, %struct.ieee80211_device** %3, align 8
  %28 = getelementptr inbounds %struct.ieee80211_device, %struct.ieee80211_device* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @memset(i32 %29, i32 0, i32 16)
  br label %31

31:                                               ; preds = %26, %18
  ret void
}

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @memset(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
